GM-76 update docs
