# order-service/docs/swagger.json
@@ -10,15 +10,32 @@
         "/v1/orders/": {
             "get": {
                 "produces": [
-                    "text/plain"
+                    "application/vnd.api+json"
                 ],
                 "tags": [
                     "Order"
                 ],
-                "summary": "Returns hello",
+                "summary": "Returns orders",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User id",
+                        "name": "user",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Application id",
+                        "name": "application",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/docs.Order"
+                        }
                     }
                 }
             },
@@ -77,6 +94,46 @@
         }
     },
     "definitions": {
+        "docs.Order": {
+            "type": "object",
+            "properties": {
+                "attributes": {
+                    "$ref": "#/definitions/docs.OrderAttributes"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "relationships": {
+                    "$ref": "#/definitions/docs.OrderRelations"
+                },
+                "type": {
+                    "type": "string",
+                    "example": "order"
+                }
+            }
+        },
+        "docs.OrderAttributes": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "method": {
+                    "$ref": "#/definitions/model.PaymentMethod"
+                }
+            }
+        },
+        "docs.OrderRelations": {
+            "type": "object",
+            "properties": {
+                "application": {
+                    "$ref": "#/definitions/model.Application"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.User"
+                }
+            }
+        },
         "jsonapi.ErrorObject": {
             "type": "object",
             "properties": {
@@ -107,6 +164,14 @@
                 }
             }
         },
+        "model.Application": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -122,8 +187,7 @@
             "type": "object",
             "required": [
                 "application",
-                "method",
-                "user"
+                "method"
             ],
             "properties": {
                 "application": {
@@ -155,6 +219,14 @@
                 "Balance",
                 "Paypal"
             ]
+        },
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
         }
     }
 }
